# duo-examples-cmake

./: .gitignore  CMakeLists.txt  README.md
include/: main.h
lib/: README
src/: main.c
